feat: добавление флоу создания заказов, Swagger и фикс YooKassa
Основные изменения:
1. Заказы: Добавлен  и usecase для оформления заказа, создания платежа в YooKassa и очистки корзины.
2. Безопасность: Защитили получение адреса по PublicID (добавлена проверка на userID).
3. Вебхуки: Исправили опечатки (cancaled -> canceled) и логику парсинга статусов YooKassa.
4. Документация: Описали Swagger для  и .
5. Инфраструктура: Обновили easyjson файлы, поправили миграцию БД.
